[gd_scene load_steps=14 format=3 uid="uid://4uvqadvod7cb"]

[ext_resource type="Script" uid="uid://db61dwu37phlo" path="res://main/in game menu/InGameMenu.gd" id="1_un1ud"]
[ext_resource type="PackedScene" uid="uid://b2i1wol5qwtld" path="res://my assets/binding/binding_container.tscn" id="2_cgffx"]
[ext_resource type="Script" uid="uid://crwdcobjkbvbr" path="res://my assets/binding/Bindings.gd" id="2_omkwt"]
[ext_resource type="PackedScene" uid="uid://b6jqqa8v3xar5" path="res://game/quest/options_holding_hand.tscn" id="4_yjfud"]
[ext_resource type="PackedScene" uid="uid://cw3dwj3hge0vn" path="res://my assets/music/VolumeContainer.tscn" id="5_suw75"]
[ext_resource type="Script" uid="uid://d05qjhu2e5jgr" path="res://main/in game menu/misc.gd" id="6_uty36"]
[ext_resource type="AudioStream" uid="uid://g16k6rwgkd2t" path="res://sounds/defunct3 laser-short-2.wav" id="6_wvpya"]
[ext_resource type="AudioStream" uid="uid://dpsnyhp7my5vg" path="res://sounds/storm-wind-trees-suburb klankbeeld.wav" id="7_5em43"]
[ext_resource type="Script" uid="uid://wchgvo0jditb" path="res://main/in game menu/Cheat.gd" id="7_gkw5d"]
[ext_resource type="AudioStream" uid="uid://bmisylcouk4hv" path="res://sounds/floor/gravel loscolt890.wav" id="8_7ptvs"]
[ext_resource type="AudioStream" uid="uid://bswe80wnn5jtc" path="res://sounds/lightning strike/thunder-clap-and-rumble kinoton.wav" id="9_5em43"]
[ext_resource type="AudioStream" uid="uid://bqaijn11s2nnj" path="res://sounds/robot/awake robot.wav" id="10_7ptvs"]
[ext_resource type="AudioStream" uid="uid://kp7iuglc17j7" path="res://sounds/gun fire impact/morganpurkis_-missile-launching.wav" id="11_58cyy"]

[node name="in game menu" type="TabContainer" node_paths=PackedStringArray("options_holding_hand_container")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
current_tab = 1
script = ExtResource("1_un1ud")
options_holding_hand_scene = ExtResource("4_yjfud")
options_holding_hand_container = NodePath("holding hand/HBoxContainer/VBoxContainer")

[node name="bindings" type="ScrollContainer" parent="." node_paths=PackedStringArray("binding_buttons", "disable_binding_button")]
visible = false
layout_mode = 2
script = ExtResource("2_omkwt")
binding_buttons = [NodePath("HBoxContainer/VBoxContainer/binding container"), NodePath("HBoxContainer/VBoxContainer/binding container2"), NodePath("HBoxContainer/VBoxContainer/binding container3"), NodePath("HBoxContainer/VBoxContainer/binding container4"), NodePath("HBoxContainer/VBoxContainer/binding container5"), NodePath("HBoxContainer/VBoxContainer/binding container6"), NodePath("HBoxContainer/VBoxContainer/binding container7"), NodePath("HBoxContainer/VBoxContainer/binding container8"), NodePath("HBoxContainer/VBoxContainer/binding container9"), NodePath("HBoxContainer/VBoxContainer/binding container10"), NodePath("HBoxContainer/VBoxContainer/binding container15")]
disable_binding_button = NodePath("HBoxContainer/disable binding button")
metadata/_tab_index = 0

[node name="HBoxContainer" type="HBoxContainer" parent="bindings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="bindings/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="disable binding button" type="Button" parent="bindings/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "it will reset on restart of the game"
text = "disable binding"

[node name="MarginContainer3" type="MarginContainer" parent="bindings/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="bindings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="bindings/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="binding container" parent="bindings/HBoxContainer/VBoxContainer" instance=ExtResource("2_cgffx")]
layout_mode = 2

[node name="binding container2" parent="bindings/HBoxContainer/VBoxContainer" instance=ExtResource("2_cgffx")]
layout_mode = 2
index = 2

[node name="binding container3" parent="bindings/HBoxContainer/VBoxContainer" instance=ExtResource("2_cgffx")]
layout_mode = 2
index = 3

[node name="binding container4" parent="bindings/HBoxContainer/VBoxContainer" instance=ExtResource("2_cgffx")]
layout_mode = 2
index = 4

[node name="binding container5" parent="bindings/HBoxContainer/VBoxContainer" instance=ExtResource("2_cgffx")]
visible = false
layout_mode = 2
index = 5

[node name="binding container6" parent="bindings/HBoxContainer/VBoxContainer" instance=ExtResource("2_cgffx")]
layout_mode = 2
index = 6

[node name="binding container7" parent="bindings/HBoxContainer/VBoxContainer" instance=ExtResource("2_cgffx")]
layout_mode = 2
index = 7

[node name="binding container8" parent="bindings/HBoxContainer/VBoxContainer" instance=ExtResource("2_cgffx")]
layout_mode = 2
index = 8

[node name="binding container9" parent="bindings/HBoxContainer/VBoxContainer" instance=ExtResource("2_cgffx")]
layout_mode = 2
index = 9

[node name="binding container10" parent="bindings/HBoxContainer/VBoxContainer" instance=ExtResource("2_cgffx")]
layout_mode = 2
tooltip_text = "it'll stop digging time
but it'll not dig for you before the end of time"
index = 10

[node name="binding container11" parent="bindings/HBoxContainer/VBoxContainer" instance=ExtResource("2_cgffx")]
layout_mode = 2
tooltip_text = "it'll stop digging time
but it'll not dig for you before the end of time"
index = 11

[node name="binding container12" parent="bindings/HBoxContainer/VBoxContainer" instance=ExtResource("2_cgffx")]
layout_mode = 2
tooltip_text = "it'll stop digging time
but it'll not dig for you before the end of time"
index = 12

[node name="binding container13" parent="bindings/HBoxContainer/VBoxContainer" instance=ExtResource("2_cgffx")]
layout_mode = 2
tooltip_text = "it'll stop digging time
but it'll not dig for you before the end of time"
index = 13

[node name="binding container14" parent="bindings/HBoxContainer/VBoxContainer" instance=ExtResource("2_cgffx")]
layout_mode = 2
tooltip_text = "it'll stop digging time
but it'll not dig for you before the end of time"
index = 14

[node name="binding container15" parent="bindings/HBoxContainer/VBoxContainer" instance=ExtResource("2_cgffx")]
layout_mode = 2
tooltip_text = "it will reset after restart of application"
index = 15
default = true

[node name="MarginContainer3" type="MarginContainer" parent="bindings/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="bindings/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="close window" type="Button" parent="bindings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "X"

[node name="audio" type="ScrollContainer" parent="."]
layout_mode = 2
metadata/_tab_index = 1

[node name="HBoxContainer" type="HBoxContainer" parent="audio"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="audio/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="audio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="audio/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 0

[node name="VolumeContainer" parent="audio/HBoxContainer/VBoxContainer" instance=ExtResource("5_suw75")]
layout_mode = 2
volume_name = "master"
db_name = "Master_p3"
bus_name = "Master"

[node name="VolumeContainer2" parent="audio/HBoxContainer/VBoxContainer" instance=ExtResource("5_suw75")]
layout_mode = 2
db_name = "music_p3"
bus_name = "music"

[node name="VolumeContainer3" parent="audio/HBoxContainer/VBoxContainer" instance=ExtResource("5_suw75")]
layout_mode = 2
audio_stream_sample = ExtResource("6_wvpya")
volume_name = "sound effects"
db_name = "sfx_p3"
bus_name = "sfx"

[node name="AudioStreamPlayer" parent="audio/HBoxContainer/VBoxContainer/VolumeContainer3" index="2"]
bus = &"sfx"

[node name="VolumeContainer4" parent="audio/HBoxContainer/VBoxContainer" instance=ExtResource("5_suw75")]
layout_mode = 2
audio_stream_sample = ExtResource("7_5em43")
volume_name = "rain effects"
db_name = "rain_p3"
bus_name = "rain"

[node name="AudioStreamPlayer" parent="audio/HBoxContainer/VBoxContainer/VolumeContainer4" index="2"]
bus = &"rain"

[node name="VolumeContainer5" parent="audio/HBoxContainer/VBoxContainer" instance=ExtResource("5_suw75")]
layout_mode = 2
audio_stream_sample = ExtResource("8_7ptvs")
volume_name = "foot steps"
db_name = "foot_steps_p3"
bus_name = "foot steps"

[node name="AudioStreamPlayer" parent="audio/HBoxContainer/VBoxContainer/VolumeContainer5" index="2"]
bus = &"foot steps"

[node name="VolumeContainer6" parent="audio/HBoxContainer/VBoxContainer" instance=ExtResource("5_suw75")]
layout_mode = 2
audio_stream_sample = ExtResource("9_5em43")
volume_name = "thunder"
db_name = "thunder_p3"
bus_name = "thunder"

[node name="AudioStreamPlayer" parent="audio/HBoxContainer/VBoxContainer/VolumeContainer6" index="2"]
bus = &"thunder"

[node name="VolumeContainer7" parent="audio/HBoxContainer/VBoxContainer" instance=ExtResource("5_suw75")]
layout_mode = 2
audio_stream_sample = ExtResource("10_7ptvs")
volume_name = "robot"
db_name = "robot_p3"
bus_name = "robot sfx"

[node name="AudioStreamPlayer" parent="audio/HBoxContainer/VBoxContainer/VolumeContainer7" index="2"]
bus = &"robot sfx"

[node name="VolumeContainer8" parent="audio/HBoxContainer/VBoxContainer" instance=ExtResource("5_suw75")]
layout_mode = 2
audio_stream_sample = ExtResource("11_58cyy")
volume_name = "turret"
db_name = "weapon_p3"
bus_name = "weapon sfx"

[node name="AudioStreamPlayer" parent="audio/HBoxContainer/VBoxContainer/VolumeContainer8" index="2"]
bus = &"weapon sfx"

[node name="MarginContainer2" type="MarginContainer" parent="audio/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="close window" type="Button" parent="audio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "X"

[node name="holding hand" type="ScrollContainer" parent="."]
visible = false
layout_mode = 2
tooltip_text = "hoover over the button to see details"
metadata/_tab_index = 2

[node name="HBoxContainer" type="HBoxContainer" parent="holding hand"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="holding hand/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="holding hand/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="holding hand/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 0

[node name="MarginContainer2" type="MarginContainer" parent="holding hand/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="close window" type="Button" parent="holding hand/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "X"

[node name="misc" type="ScrollContainer" parent="." node_paths=PackedStringArray("quest_move", "slow_letters", "speak_names")]
visible = false
layout_mode = 2
tooltip_text = "hoover over the button to see details"
script = ExtResource("6_uty36")
quest_move = NodePath("HBoxContainer/VBoxContainer/quest move")
slow_letters = NodePath("HBoxContainer/VBoxContainer/HBoxContainer/slow letters")
speak_names = NodePath("HBoxContainer/VBoxContainer/speak names")
metadata/_tab_index = 3

[node name="HBoxContainer" type="HBoxContainer" parent="misc"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="misc/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="misc/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="misc/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 0

[node name="quest move" type="CheckBox" parent="misc/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "move around while quest dialog is opened"
text = "quest dialog -> move"

[node name="HBoxContainer" type="HBoxContainer" parent="misc/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="misc/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "slow letters"

[node name="slow letters" type="LineEdit" parent="misc/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "how much time each character is writing
till next char is being written
at dialogs"
placeholder_text = "time till next char"
expand_to_text_length = true
virtual_keyboard_type = 3

[node name="speak names" type="CheckBox" parent="misc/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "speak names of bots when you hover over them"
text = "speak names"

[node name="MarginContainer2" type="MarginContainer" parent="misc/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="close window" type="Button" parent="misc/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "X"

[node name="cheat" type="ScrollContainer" parent="."]
visible = false
layout_mode = 2
tooltip_text = "hoover over the button to see details"
script = ExtResource("7_gkw5d")
metadata/_tab_index = 4

[node name="HBoxContainer" type="HBoxContainer" parent="cheat"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="cheat/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="cheat/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="cheat/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 0

[node name="ButtonResetTraderMoney" type="Button" parent="cheat/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "reset trader money"

[node name="ActivateMark" type="Button" parent="cheat/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
tooltip_text = "To activate mark.
So that you can try different fork,
without restarting the whole game."
text = "activate Mark"

[node name="RemoveSophieMission" type="Button" parent="cheat/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "remove sophie mission"

[node name="MarginContainer2" type="MarginContainer" parent="cheat/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="close window" type="Button" parent="cheat/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "X"

[node name="quit" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
metadata/_tab_index = 5

[node name="MarginContainer" type="MarginContainer" parent="quit"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="quit"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="quit/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 3

[node name="quit game button" type="Button" parent="quit/VBoxContainer"]
layout_mode = 2
text = "quit game"

[node name="quit button" type="Button" parent="quit/VBoxContainer"]
layout_mode = 2
text = "quit application"

[node name="MarginContainer3" type="MarginContainer" parent="quit/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="quit"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="close window" type="Button" parent="quit"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "X"

[connection signal="pressed" from="bindings/HBoxContainer/disable binding button" to="bindings" method="disable_binding"]
[connection signal="pressed" from="bindings/HBoxContainer/close window" to="." method="close_window"]
[connection signal="pressed" from="audio/HBoxContainer/close window" to="." method="close_window"]
[connection signal="pressed" from="holding hand/HBoxContainer/close window" to="." method="close_window"]
[connection signal="toggled" from="misc/HBoxContainer/VBoxContainer/quest move" to="misc" method="_on_quest_move_toggled"]
[connection signal="text_submitted" from="misc/HBoxContainer/VBoxContainer/HBoxContainer/slow letters" to="misc" method="_on_slow_letters_text_submitted"]
[connection signal="toggled" from="misc/HBoxContainer/VBoxContainer/speak names" to="misc" method="_on_speak_names_toggled"]
[connection signal="pressed" from="misc/HBoxContainer/close window" to="." method="close_window"]
[connection signal="pressed" from="cheat/HBoxContainer/VBoxContainer/ButtonResetTraderMoney" to="cheat" method="_on_button_reset_trader_money_pressed"]
[connection signal="pressed" from="cheat/HBoxContainer/VBoxContainer/ActivateMark" to="cheat" method="_on_activate_mark_pressed"]
[connection signal="pressed" from="cheat/HBoxContainer/VBoxContainer/RemoveSophieMission" to="cheat" method="_on_remove_sophie_mission_pressed"]
[connection signal="pressed" from="cheat/HBoxContainer/close window" to="." method="close_window"]
[connection signal="pressed" from="quit/VBoxContainer/quit game button" to="." method="_on_quit_game_button_pressed"]
[connection signal="pressed" from="quit/VBoxContainer/quit button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="quit/close window" to="." method="close_window"]

[editable path="audio/HBoxContainer/VBoxContainer/VolumeContainer3"]
[editable path="audio/HBoxContainer/VBoxContainer/VolumeContainer4"]
[editable path="audio/HBoxContainer/VBoxContainer/VolumeContainer5"]
[editable path="audio/HBoxContainer/VBoxContainer/VolumeContainer6"]
[editable path="audio/HBoxContainer/VBoxContainer/VolumeContainer7"]
[editable path="audio/HBoxContainer/VBoxContainer/VolumeContainer8"]
